--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @font-face {
   font-family: myfont;
-  src: url(valo.otf);
+  src: url(cross.otf);
+ 
+ 
 }
 * {
   padding: 0;
@@ -18,6 +20,7 @@ body {
 
 #nav-elem ul a {
   color: #FFFFEA;
+  text-transform: uppercase;
   font-weight: 500;
   font-size: 1.1rem;
   font-family:myfont;
@@ -36,8 +39,9 @@ body {
 }
 .credit{
   color: #26FFFF;
-  font-size: 250px;
+  font-size: 100px;
   font-family: myfont;
+  text-transform: uppercase;
   
 }
 .credit span{
